# easyzapret

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: UPDATER_SETUP.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh
src-tauri/src/: admin.rs  lib.rs  main.rs  paths.rs  settings.rs  tray.rs  util.rs
src-tauri/src/autopilot/: mod.rs
src-tauri/src/logs/: mod.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/tg_proxy/: mod.rs
src-tauri/src/updates/: mod.rs
src-tauri/src/warp/: mod.rs
src-tauri/src/zapret/: diagnostics.rs  mod.rs  process.rs  service.rs  strategy.rs
src/components/: Logo.tsx  SetupModal.tsx  Sidebar.tsx  Toasts.tsx  UpdatesModal.tsx  WhatsNewModal.tsx  ui.tsx
src/i18n/: en.ts  index.ts  ru.ts
src/lib/: api.ts  appUpdate.ts  errors.ts  store.ts  toast.ts  types.ts
src/pages/: Autopilot.tsx  Home(1).tsx  Home.tsx  Lists(1).tsx  Lists.tsx  Logs(1).tsx  Logs.tsx  Service(1).tsx  Service.tsx  Settings.tsx  Strategies.tsx  Telegram(1).tsx  Tests(1).tsx  Tests.tsx  Warp.tsx  Zapret.tsx
