[package]
name = "easyzapret"
version = "0.3.0"
description = "EasyZapret - desktop manager for Flowseal zapret-discord-youtube and tg-ws-proxy"
authors = ["EasyZapret"]
edition = "2021"

[lib]
name = "easyzapret_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
zip = "2"
sysinfo = "0.33"
chrono = "0.4"
dirs = "5"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
